--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world
+    <center>
+      <h1> Elon Musk Tribute Page </h1>
+    </center>
     <script src="script.js"></script>
   </body>
 </html>
