I added an Elon Musk photo, and changed file order by accident but to no negative effect

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+
     <center>
       <h1> Elon Musk Tribute Page </h1>
     </center>
+
+    <img src="img/ElonMuskPhoto.jpeg" alt="Photo of Elon Musk">
+
+    
     <script src="script.js"></script>
   </body>
 </html>
