i added the header element, added a red color background, captioned and centered it, centered the ElonMuskPhoto.jpeg, added two images to img folder

--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header>
 
+      <center>
+        <h1> Elon Musk Tribute Page </h1>
+      </center>
+
+    </header>
+    
     <center>
-      <h1> Elon Musk Tribute Page </h1>
+      <img src="img/ElonMuskPhoto.jpeg" alt="Photo of Elon Musk">
     </center>
 
-    <img src="img/ElonMuskPhoto.jpeg" alt="Photo of Elon Musk">
+    <center>
+      <caption>
+        Caption: Elon Musk Smiling 
+      </caption>
+    </center>
 
-    
     <script src="script.js"></script>
   </body>
 </html>
