Added a Nav bar Added the Precursor: I dont worship Elon Musk deleted script.js

--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+
   <body>
+    <center>
+      <p>  Precursor: I don't worship Elon Musk </p>
+    </center>
+
     <header>
       <center>
-        <h1> Elon Musk Tribute Page </h1>
+        <nav>
+          <ul class = "nav-area">
+            <li> <a href="#"> Home </a></li>
+            <li> <a href="#"> About </a></li>
+            <li> <a href="#"> News </a></li>
+        </nav> 
       </center>
     </header>
+
     
     <center>
       <img src="img/ElonMuskPhoto.jpeg" alt="Photo of Elon Musk">
@@ -23,6 +34,6 @@
       </caption>
     </center>
 
-    <script src="script.js"></script>
+    
   </body>
 </html>
