--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <center>
         <nav>
           <ul class = "nav-area">
-            <li> <a href="#"> Home </a></li>
-            <li> <a href="#"> About </a></li>
-            <li> <a href="#"> News </a></li>
+            <li class = "navlinks"> <a href="#"> Home </a></li>
+            <li class = "navlinks">  <a href="#"> About </a></li>
+            <li class = "navlinks"> <a class = "navlinks" href="#"> News </a></li>
         </nav> 
       </center>
     </header>
