added nav link spacing

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   </head>
 
   <body>
-    <center>
-      <p>  Precursor: I don't worship Elon Musk </p>
-    </center>
 
     <header>
       <center>
         <nav>
           <ul class = "nav-area">
+            <p> Elon Musk Tribute Page </p>
             <li class = "navlinks"> <a href="#"> Home </a></li>
             <li class = "navlinks">  <a href="#"> About </a></li>
             <li class = "navlinks"> <a class = "navlinks" href="#"> News </a></li>
