added the Companies list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-
+    <!-- This is the nav bar + Elon Musk Header-->
     <header>
       <center>
         <nav>
@@ -21,11 +21,26 @@
       </center>
     </header>
 
-    
+    <!-- This is the aside element for both sides -->
+    <aside>
+     Companies: 
+     <br>
+      Zip2
+      Paypal
+      Tesla
+      Spacex
+      Hyperloop
+      The Boring Company
+      Open Ai
+      Nueralink 
+    </aside>
+
+    <!--image -->
     <center>
       <img src="img/ElonMuskPhoto.jpeg" alt="Photo of Elon Musk">
     </center>
 
+    <!-- Caption -->
     <center>
       <caption>
         Caption: Elon Musk Smiling 
