--- a/index.html
+++ b/index.html
@@ -21,31 +21,33 @@
       </center>
     </header>
 
-    <!-- This is the aside element for both sides -->
-    <aside>
-     Companies: 
+    <!-- This is the aside element for both sides 
+    note: need to indent starting from first br for clean code-->
+    <aside class = "down">
+     <div class ="pushdown">
+      Companies: 
      <br>
-      Zip2
-      Paypal
-      Tesla
-      Spacex
-      Hyperloop
-      The Boring Company
-      Open Ai
-      Nueralink 
+      <a href ="https://en.wikipedia.org/wiki/Zip2">Zip2</a> 
+      <br>
+      <a href = "https://en.wikipedia.org/wiki/PayPal">Paypal</a>
+      <br>
+      <a href = "https://en.wikipedia.org/wiki/Tesla,_Inc.">Tesla</a>
+      <br>
+      <a href = "https://en.wikipedia.org/wiki/SpaceX"> Spacex </a>
+      <br>
+      <a href = "https://en.wikipedia.org/wiki/Hyperloop"> Hyperloop </a>
+      <br>
+      <a href = "https://en.wikipedia.org/wiki/The_Boring_Company"> The Boring Company </a>
+      <br>
+      <a href = "https://en.wikipedia.org/wiki/OpenAI"> Open Ai </a>
+      <br>
+      <a href = "https://en.wikipedia.org/wiki/Neuralink" > Nueralink </a> 
+      </div>
     </aside>
 
     <!--image -->
-    <center>
-      <img src="img/ElonMuskPhoto.jpeg" alt="Photo of Elon Musk">
-    </center>
-
-    <!-- Caption -->
-    <center>
-      <caption>
-        Caption: Elon Musk Smiling 
-      </caption>
-    </center>
+      <img src="img/MuskLogo.png" alt="Photo of Elon Musk">
+  
 
     
   </body>
