I completed the header all the way, added logo, and photo

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
       </div>
     </aside>
 
-    <!--image -->
-      <img src="img/MuskLogo.png" alt="Photo of Elon Musk">
-  
+    <!--image  logo -->
+    <img class = "logo" src="img/MuskLogo.png" alt="Logo">
 
-    
+    <img class = "mainPhoto" src ="img/ElonMuskPhoto.png" alt = "Photo of Elon Musk">
   </body>
 </html>
