finished the project, centered everything to the best of my ability, brought logo back, everything looks good in full screen

--- a/index.html
+++ b/index.html
@@ -49,5 +49,24 @@
     <img class = "logo" src="img/MuskLogo.png" alt="Logo">
 
     <img class = "mainPhoto" src ="img/ElonMuskPhoto.png" alt = "Photo of Elon Musk">
+
+    <br>
+    <br>
+
+    <div class="blue">
+      <p>
+        Childhood: Elon Musk born on June 28, 1971 was born in Pretoria, South Africa. He was very geeky, and left apartheid South Africa when he was soon to be enlisted in the mandatory military.
+      </p>
+
+      <p>
+        Early Career:  Elon Musk moved to Canada, expecting immigration from Canada to the U.S. would be easier than from South Africa. He went to two universities in Canada, and eventually tranferred to UPenn. He would then do some internships in Silicon Valley, and eventually would enroll in Stanford, dropping out within two days to start an internet company. He would start Zip2 and Paypal there, where he would eventually would sell to Ebay and become a millionaire.  Unsatisfied with the idle millionaire lifestyle, he would go on to start Tesla and  then Spacex. These were both extremely tough industries  to change, and  would take many years and trials for Elon to get a glipse of some success. For both companies, he was on the brink of bancrupcy, especially with  Tesla being only days away.
+      </p>
+
+      <p>
+        The Success Era and the Present: Elon Musk soon became successful with Tesla and Spacex, these companies would be worth hundreds of billions of dollar. In 2021, he surpassed Jeff Bezos as the richest man in the world, and at one point reached a net worth of $300 billion. Elon Musk, through his success continues to create comapnies that he believes changes the world for the better.
+      </p>
+
+    <div>
+
   </body>
 </html>
